Fix: Server crash by removing Firebase